# icpc-challenge

./: .gdbinit  CMakeLists.txt  answer.cpp  be_a_skilled_engineer.md  fubao_economics.md  liheng.md  management_note.md  notes.txt  profit.py  redis.md  setup_kube.md
2019/: full_solution.md
2019/A/: main.cpp  test_case.sh
2019/B/: main.cpp  test_case.sh
2019/C/: ans.cpp  main.cpp  test_case.sh
2019/D/: main.cpp  test_case.sh
2019/E/: main.cpp  test_case.sh
2019/F/: answer.cpp  answer2.cpp  dep_test1.txt  dep_test2.txt  gen_flame_graph.sh  main.cpp  matplot.py  roll.py  sample_test2.txt  solution.md  solution.py  test.sh  test.txt  test_case.sh  test_gen.py  testcase.py
2019/G/: main.cpp  main_ac_automaton.cpp  main_ac_automaton_big_trie.cpp  main_ac_automaton_simple.cpp  main_counting_sort.cpp  main_std_sort.cpp  test_case.sh
2019/H/: gen_flame_graph.sh  main.cpp  solution.md  test_case.sh
2019/I/: gen_flame_graph.sh  main.cpp  solution.md  test_case.sh
2019/J/: ans.cpp  ans_commented.cpp  main.cpp  test_case.sh
2019/K/: main.cpp  test_case.sh
2020/: full_solution.md
2020/A-Cardiology/: Main.java  main.cpp  main.go  test_case.sh
2020/B-TheCostofSpeedLimits/: Main.java  dk-modified.cpp  main.cpp  main.go  test_case.sh
2020/C-Domes/: Main.java  calc.py  main.cpp  main.go  test_case.sh
2021/: CMakeLists.txt  full_solution.md  quickSort.cpp
badminton/: 单打.md  发力.md  握拍.md  节奏.md
blog/: backend_effiency.md  be_a_skilled_engineer.md  distributed_system.md  go_internal.md  huya.md  management_note.md  mysql_note.md  人生意义.md
kube/: kube-flannel.yml  kubernetes_must_know.md  setup_kube.md
(+57 files in other folders)
