cmake_minimum_required(VERSION 3.10)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(directing_rainfall 2019/F/main.cpp)
add_executable(azulejos 2019/A/main.cpp)
add_executable(beautiful_bridges 2019/B/main.cpp)
add_executable(hobsons_train 2019/H/main.cpp)
add_executable(karel_the_robot 2019/I/main.cpp)
add_executable(miniature_golf 2019/J/main.cpp)
add_executable(dead_end_detector 2019/E/main.cpp)
add_executable(circular_dna 2019/D/main.cpp)
add_executable(first_of_her_name 2019/G/main.cpp)
add_executable(checks_post_facto 2019/C/main.cpp)
add_executable(traffic_blights 2019/K/main.cpp)
add_executable(first_of_her_name2 2019/G/main_ac_automaton.cpp)
